--- a/app/src/main/res/layout/activity_nouveau_pret.xml
+++ b/app/src/main/res/layout/activity_nouveau_pret.xml
@@ -119,7 +119,7 @@
                             android:ems="10"
                             android:inputType="date" />
 
-                        <ImageView
+                        <ImageButton
                             android:id="@+id/img_date_picker"
                             android:layout_weight="1.48"
                             android:src="@drawable/ic_date_range_black_24dp"
